--- a/warmup_pca.ipynb
+++ b/warmup_pca.ipynb
@@ -1121,12 +1121,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master e63723e] completed\n",
+      " 1 file changed, 914 insertions(+), 27 deletions(-)\n",
+      "Enumerating objects: 16, done.\n",
+      "Counting objects: 100% (16/16), done.\n",
+      "Delta compression using up to 4 threads\n",
+      "Compressing objects: 100% (15/15), done.\n",
+      "Writing objects: 100% (16/16), 54.45 KiB | 5.44 MiB/s, done.\n",
+      "Total 16 (delta 2), reused 0 (delta 0), pack-reused 0 (from 0)\n",
+      "remote: Resolving deltas: 100% (2/2), done.\u001b[K\n",
+      "To github.com:juliensoudet/data-face-recognition.git\n",
+      " * [new branch]      master -> master\n"
+     ]
+    }
+   ],
    "source": [
     "! git add warmup_pca.ipynb\n",
-    "! git"
+    "! git commit -m 'completed'\n",
+    "!git push origin master"
    ]
   },
   {
